# go2_apportation

./: .dockerignore  .gitignore  ASSUMPTIONS_PROPOSED.md  DECISION_TEMPLATES.md  IMPLEMENTATION_STATUS.md  OPEN_QUESTIONS.md  README_DEV.md  pytest.ini
build_container/coco_detector/: colcon_command_prefix_setup_py.sh.env
build_container/go2_apportation_mocks/: colcon_command_prefix_setup_py.sh  colcon_command_prefix_setup_py.sh.env
build_container/go2_apportation_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__go2_apportation_msgs.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
build_container/go2_apportation_orchestrator/: colcon_command_prefix_setup_py.sh.env
build_container/go2_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt
build_container/go2_interfaces/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  (+11 more)
community_sdk/: COLCON_IGNORE
config/: contracts.yaml  manual_sensor_calibration.rviz  mapping_test_extrinsics.env  nav2_lidar_only_params_template.yaml  nav2_params.yaml  nav2_rtabmap_lidar_params.yaml  realsense.yaml  realsense_d410_fallback.yaml  realsense_manual_calibration.yaml  rtabmap_params.yaml  rtabmap_ros2_params.yaml  runtime_topics.yaml  slam_toolbox_lidar_params.yaml
docker/: Dockerfile.board_runtime
docs/: IMPLEMENTATION_RULES_FOR_CODEX.md  Projektarbeit_dokument_002  TECH_FREEZE_LOG.md
go2_d1_550_bringup/: CMakeLists.txt  package.xml
go2_d1_550_bringup/config/: cyclonedds.xml
go2_d1_550_bringup/launch/: real_robot.launch.py
go2_d1_550_bringup/scripts/: d1_550_sdk_bridge.py
go2_d1_550_description/: CMakeLists.txt  package.xml
go2_d1_550_description/launch/: display.launch.py
go2_d1_550_description/rviz/: view_robot.rviz
go2_d1_550_description/urdf/: go2_d1_550.urdf.xacro
go2_d1_550_moveit_config/: CMakeLists.txt  package.xml
go2_d1_550_moveit_config/config/: go2_d1_550.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
go2_d1_550_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py
install_container_bridge_check/: local_setup.sh  setup.sh
install_diag/: local_setup.sh  setup.sh
install_diag/go2_apportation_mocks/share/go2_apportation_mocks/: package.dsv  package.ps1  package.sh  package.xml
install_diag2/: local_setup.sh  setup.sh
install_diag2/go2_apportation_orchestrator/share/go2_apportation_orchestrator/: package.bash  package.dsv  package.sh  package.xml
launch/: board_description.launch.py  board_minimal.launch.py  bringup_minimal.launch.py  manual_sensor_calibration.launch.py  nav2_rtabmap.launch.py  realsense_board.launch.py  rtabmap_localization.launch.py  rtabmap_mapping.launch.py  slam_toolbox_lidar.launch.py
log_container/: latest_build
log_diag/: latest_build
log_diag2/: latest_build
scripts/: run_mock_demo.sh
src/go2_apportation_msgs/: CMakeLists.txt  package.xml
src/go2_apportation_msgs/action/: PickObject.action
src/go2_apportation_msgs/msg/: Detection3D.msg  InterceptGoal.msg  PredictedRegion.msg  ThrowStatus.msg  TrackingDirective.msg
src/go2_apportation_msgs/srv/: ReleaseObject.srv
src/go2_cube_perception/: package.xml  setup.cfg  setup.py
src/go2_cube_perception/config/: cube_perception.params.yaml
src/go2_cube_perception/go2_cube_perception/: __init__.py  backend_types.py  contracts.py  cube_grasp_pose.py  depth_roi.py  frames.py  look_control.py  msg_adapters.py  object_detector_trt_node.py  object_pose_precise_node.py  object_position_fast_node.py  topics.py
src/go2_cube_perception/launch/: cube_perception.launch.py
src/go2_cube_perception/resource/: go2_cube_perception
src/go2_description/: CMakeLists.txt  package.xml
src/go2_description/GO2_URDF/launch/: check_joint.rviz
src/go2_description/launch/: base_link_bridge.launch.py  robot_state_publisher.launch.py
src/go2_description/urdf/: go2.urdf
src/go2_nav2_bridge/: CMakeLists.txt  README.md  package.xml
src/go2_nav2_bridge/config/: bridge.yaml
src/go2_nav2_bridge/include/go2_nav2_bridge/: ros2_sport_client.h
src/go2_nav2_bridge/src/: go2_nav2_bridge.cpp  ros2_sport_client.cpp
src/go2_tf_tools/: package.xml  setup.cfg  setup.py
src/go2_tf_tools/go2_tf_tools/: odom_to_tf_broadcaster.py  zero_joint_state_publisher.py
tests/: test_action_token_dispatcher.py  test_best_candidate_selection.py  test_cube_perception_contracts.py  test_cube_perception_params.py  test_cube_pose_canonicalization.py  test_depth_roi_fast_path.py  test_fast_detection_projection.py  test_look_control.py  test_manipulation_runtime_mappings.py  test_map_filter_state.py  test_mock_scenario_config.py  test_mode_updates.py  test_nav2_skill_real_client.py  test_object_tracking_contracts.py  test_odom_to_tf_broadcaster.py  test_orchestrator_runtime_contracts.py  test_orchestrator_runtime_core.py  test_person_surface_contracts.py  test_precise_last_seen_transform.py  test_precise_point_cloud.py  test_precise_pose_geometry.py  test_precise_pose_node_logic.py  test_prediction_gating.py  test_prediction_intercept_outputs.py  test_public_surface_updates.py  test_release_mode_constants.py  test_runtime_input_defensive_logic.py  test_runtime_pipeline_owner_local.py  test_skill_bundle_factory.py  test_throw_state_machine.py  test_tracker_fast_staleness.py  test_tracking_decision_flags.py  test_tracking_public_outputs.py  test_transition_engine_pure.py  test_transition_resolver.py
(+595 files in other folders)
