<?xml version="1.0"?>
<package format="3">
  <name>go2_d1_550_description</name>
  <version>0.1.0</version>
  <description>
    Combined URDF description for Unitree Go2 EDU with D1-550 robotic arm
    and Intel RealSense D415 camera.
  </description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>go2_description</depend>
  <depend>d1_550_description</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
